Better error reporting for connecting to authenticated Solr clusters